tests/build/cases/widget_new/error_in_when_expr1.stderr
error[E0308]: mismatched types
 --> cases/widget_new/error_in_when_expr1.rs:9:26
  |
9 |             let a: u32 = true;
  |                    ---   ^^^^ expected `u32`, found `bool`
  |                    |
  |                    expected due to this
